--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -88,3 +88,16 @@ body.hideX .pace {
 .app-footer .social a {
   margin-right: 4px;
 }
+
+.neon {
+  color: #fff;
+  text-shadow:
+    0 0 5px #fff,
+    // 0 0 10px #fff,
+    // 0 0 20px #fff,
+    0 0 40px #0ff,
+    // 0 0 80px #0ff,
+    0 0 90px #0ff,
+    // 0 0 100px #0ff,
+    // 0 0 150px #0ff;
+}
