--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -6269,6 +6269,7 @@ span:hover {
 
 .team .item.cir .img:hover:before {
   opacity: 0.5;
+  cursor: pointer;
 }
 
 .team .item.cir .img:after {
@@ -6278,6 +6279,7 @@ span:hover {
   left: 0;
   right: 0;
   bottom: 5px;
+  cursor: pointer;
   background: -webkit-gradient(
     linear,
     left top,
