svg add responsitived

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -102,21 +102,15 @@ body.hideX .pace {
     // 0 0 150px #0ff;
 }
 
-@-webkit-keyframes logo-animate {
-  0%   { opacity: 1; }
-  25%   { opacity: 0.1; }
-  50%   { opacity: 1; }
-  100% { opacity: 1; }
-}
-
-.first-title {
-  -webkit-animation: logo-animate 1s infinite;
-  animation:         logo-animate 2s infinite;
-  animation-delay: 5s;
-}
-
-.second-title {
-  -webkit-animation: logo-animate 1s infinite;
-  animation:         logo-animate 2s infinite;
-  animation-delay: 4s;
+.svgtext {
+  font-size: 10rem;
+  @media (min-width: 850px) {
+    font-size: 8rem;
+  }
+  @media (min-width: 750px) {
+    font-size: 3.5rem;
+  }
+  @media (min-width: 450px) {
+    font-size: 2rem;
+  }
 }
