--- a/public/css/light.css
+++ b/public/css/light.css
@@ -1151,6 +1151,11 @@ span:hover {
   animation-delay: 0.6s;
 }
 
+.loading span:nth-child(8) {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
 @-webkit-keyframes loading {
   0% {
     opacity: 1;
