--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -133,6 +133,11 @@ option {
   color: #0ff;
 }
 
+.imgLoad {
+  width: 100%;
+  height: auto;
+}
+
 .spinner-wrapper {
   height: 100vh;
   width: 100vw;
