--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -1294,7 +1294,7 @@ span:hover {
   width: 6px;
   height: 6px;
   z-index: 10000001;
-  background-color: #12c2e9;
+  /* background-color: #12c2e9; */
   -webkit-transition: width 0.3s ease-in-out, height 0.3s ease-in-out,
     margin 0.3s ease-in-out, opacity 0.3s ease-in-out;
   -o-transition: width 0.3s ease-in-out, height 0.3s ease-in-out,
@@ -1308,16 +1308,16 @@ span:hover {
   margin-top: -35px;
   width: 70px;
   height: 70px;
-  background-color: #12c2e9;
+  /* background-color: #12c2e9; */
   opacity: 0.3;
 }
 
 .cursor-outer {
   margin-left: -12px;
   margin-top: -12px;
-  width: 30px;
-  height: 30px;
-  border: 1px solid #12c2e9;
+  width: 40px;
+  height: 40px;
+  /* border: 1px solid #12c2e9; */
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 10000000;
