--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -1313,7 +1313,7 @@ span:hover {
 }
 
 .cursor-outer {
-  margin-left: -12px;
+  margin-left: -35px;
   margin-top: -12px;
   width: 40px;
   height: 40px;
@@ -1325,7 +1325,46 @@ span:hover {
   -webkit-transition: all 0.08s ease-out;
   -o-transition: all 0.08s ease-out;
   transition: all 0.08s ease-out;
+	/* background: url('/public/img//portfolio//portfolio//Bayc/load.png') center; */
+  
 }
+
+.cursor-outer
+
+/* .rotationImg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100px;
+  width: 100px;
+  margin: 0px auto;
+  -webkit-animation: rotation 3s infinite linear;
+  -moz-animation: rotation 3s infinite linear;
+  -o-animation: rotation 3s infinite linear;
+  animation: rotation 3s infinite linear;
+  /* border: 6px solid rgba(0,174,239, .15) */
+/* } */
+
+
+/* @-webkit-keyframes rotation {
+  from {-webkit-transform: rotate(0deg);}
+  to {-webkit-transform: rotate(359deg);}
+}
+
+@-moz-keyframes rotation {
+  from {-moz-transform: rotate(0deg);}
+  to {-moz-transform: rotate(359deg);}
+}
+
+@-o-keyframes rotation {
+  from {-o-transform: rotate(0deg);}
+  to {transform: rotate(359deg);}
+}
+
+@keyframes rotation {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(359deg);}
+} */
 
 .cursor-outer.cursor-hover {
   opacity: 0;
