--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -1091,20 +1091,23 @@ span:hover {
   -webkit-transition-delay: 1.5s;
   -o-transition-delay: 1.5s;
   transition-delay: 1.5s;
+  transition-duration: 4s;
 }
 
 #preloader.isdone:after,
 #preloader.isdone:before {
   height: 0;
-  -webkit-transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
-  -o-transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
-  transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
+  -webkit-transition: all 0.5s cubic-bezier(1, 0, 0.55, 1);
+  -o-transition: all 0.5s cubic-bezier(1, 0, 0.55, 1);
+  transition: all 0.5s cubic-bezier(1, 0, 0.55, 1);
   -webkit-transition-delay: 1s;
   -o-transition-delay: 1s;
   transition-delay: 1s;
 }
 
 .loading {
+  width: 100%;
+  height: 100vh;
   position: fixed;
   left: 50%;
   top: calc(50% - 40px);
@@ -1115,12 +1118,14 @@ span:hover {
   font-size: 13px;
   text-transform: uppercase;
   letter-spacing: 10px;
+  overflow: hidden;
   z-index: 9999999999;
 }
 
 .loading.isdone {
   top: 50%;
   opacity: 0;
+  display: none;
   -webkit-transition: all 0.8s;
   -o-transition: all 0.8s;
   transition: all 0.8s;
@@ -1128,6 +1133,35 @@ span:hover {
   -o-transition-delay: 0.5s;
   transition-delay: 0.5s;
 }
+
+/* video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.video {   
+  object-fit: cover;   
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1; 
+}
+
+#LoadVideo.isdone {
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transition-delay: 0.5s;
+  -o-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+} */
+
+
 
 .loading span {
   -webkit-animation: loading 1.4s infinite alternate;
@@ -1188,6 +1222,73 @@ span:hover {
     opacity: 0;
   }
 }
+
+@-webkit-keyframes video {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes video {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+/* .loadV {
+  position: fixed;
+  left: 50%;
+  top: calc(50% - 40px);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  font-weight: 300;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  z-index: 9999999999;
+}
+
+.loadV.isdone {
+  top: 50%;
+  opacity: 0;
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+  -webkit-transition-delay: 0.5s;
+  -o-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+}
+
+
+
+@-webkit-keyframes loadV {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes loadV {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+} */
 
 /* ====================== [ End Preloader ] ====================== */
 /* ====================== [ Start Text Animation & Images ] ====================== */
