--- a/src/components/Loading-Screen/loadV.module.css
+++ b/src/components/Loading-Screen/loadV.module.css
@@ -1,9 +1,9 @@
 .video {   
-	object-fit: cover;   
 	width: 100%;
 	height: 100%;
-	position: fixed;
+	object-fit: cover;   
+	/* position: fixed; */
 	z-index: -1; 
 	transition-duration: 3s;
-	transition-timing-function: ease-in-out;
+	/* transition-timing-function: ease-in-out; */
 }
