--- a/src/components/Loading-Screen/loadV.module.css
+++ b/src/components/Loading-Screen/loadV.module.css
@@ -7,3 +7,10 @@
 	transition-duration: 3s;
 	/* transition-timing-function: ease-in-out; */
 }
+
+@media screen and (max-width: 767px) {
+	.video {
+		width: 100%;
+		height: auto;
+	}
+}
