--- a/src/components/Loading-Screen/loadV.module.css
+++ b/src/components/Loading-Screen/loadV.module.css
@@ -11,6 +11,7 @@
 @media screen and (max-width: 767px) {
 	.video {
 		width: 100%;
-		height: auto;
+		height: 100%;
+		object-fit: contain;
 	}
 }
