--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -1134,6 +1134,35 @@ span:hover {
   transition-delay: 0.5s;
 }
 
+.loadingTwo {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  left: 50%;
+  top: calc(50% - 40px);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  font-weight: 300;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  overflow: hidden;
+  z-index: 9999999999;
+}
+
+.loadingTwo.isdone {
+  top: 50%;
+  opacity: 0;
+  display: none;
+  -webkit-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
+  -webkit-transition-delay: 0.5s;
+  -o-transition-delay: 0.5s;
+  transition-delay: 0.5s;
+}
+
 /* video {
   width: 100%;
   height: 100%;
@@ -1169,8 +1198,8 @@ span:hover {
 }
 
 .loading span:nth-child(1) {
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
 }
 
 .loading span:nth-child(2) {
@@ -5257,6 +5286,7 @@ span:hover {
   -webkit-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
+  cursor: pointer;
 }
 
 .portfolio .gallery .items .item-img:hover .cont {
