--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -133,6 +133,14 @@ option {
   color: #0ff;
 }
 
+.imgLoad{
+  text-align: center;
+}
+
+.menuImg{
+  width: 100%;
+}
+
 
 // .loadV {
 //   position: fixed;
@@ -241,4 +249,13 @@ option {
 @keyframes rotation {
   from {transform: rotate(0deg);}
   to {transform: rotate(259deg);}
+}
+
+.modalBtn {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10000000;
+  padding: 12px 24px;
 }
