--- a/src/components/Loading-Screen/loadV.module.css
+++ b/src/components/Loading-Screen/loadV.module.css
@@ -1,6 +1,6 @@
 .video {   
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	object-fit: cover;   
 	/* position: fixed; */
 	z-index: -1; 
@@ -8,10 +8,19 @@
 	/* transition-timing-function: ease-in-out; */
 }
 
+.alert {
+	display: flex;
+	width: 100%;
+	height: auto;
+	flex-direction: column;
+}
+
+
+
 @media screen and (max-width: 767px) {
 	.video {
 		width: 100%;
-		height: 100%;
-		object-fit: contain;
+		height: 80vh;
+		object-fit: cover;
 	}
 }
