--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -2073,7 +2073,11 @@ span:hover {
 }
 
 .navbar .logo {
-  width: 50px;
+  width: 100px;
+}
+
+#navi .logo .logoNew {
+  width: 100px;
 }
 
 .nav-scroll {
@@ -8289,7 +8293,7 @@ footer .item .logo {
 }
 
 footer .item .logo img {
-  width: 50px;
+  width: 100px;
 }
 
 footer .item .social a {
